--- a/pom.xml
+++ b/pom.xml
@@ -12,4 +12,11 @@
         <exec.mainClass>com.mycompany.suporte.Suporte</exec.mainClass>
     </properties>
     <name>AutoEscola</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>20</version>
+        </dependency>
+    </dependencies>
 </project>
