--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <exec.mainClass>com.mycompany.suporte.Suporte</exec.mainClass>
+        <exec.mainClass>com.mycompany.AutoEscola.AutoEscola</exec.mainClass>
     </properties>
     <name>AutoEscola</name>
     <dependencies>
